--- a/docs/src/code/building-linuxcnc.adoc
+++ b/docs/src/code/building-linuxcnc.adoc
@@ -239,15 +239,19 @@ Developers among themselves exchange only the source code, likely supported by t
 Also, when building the software for a machine that doesn't have the build environment installed,
 or that doesn't have internet access, one happily accepts a prebuilt package.
 
-Building Debian packages requires the `dpkg-buildpackage` tool the is provided by the `dpkg-dev` package.
-But when building a Debian package, is generally expected to have all scripts in place that would commonly be expected.
-This has been formally manifested as a virtual package named `build-essential`:
+Building Debian packages is performed with the `dpkg-buildpackage` tool that is
+provided by the `dpkg-dev` package. Its execution comes with a series of prerequisites
+that are detailed below:
+ * general build infrastructure shall be installed, i.e. compilers, etc.
+ * build-time dependencies are to be installed, i.e. header files for external code libraries used,
+   as described in the section <<Satisfying-Build-Dependencies,Satisfying Build Dependencies>>.
+ * file in debian folder need to be complete that describe the package
+
+Build tools have been gathered as a virtual package named `build-essential`. To install it, run:
+
 ----
 $ sudo apt-get install build-essential
 ----
-
-Building Debian packages also requires that all package-specific build dependencies are installed,
-as described in the section <<Satisfying-Build-Dependencies,Satisfying Build Dependencies>>.
 
 Once those prerequisites are met, building the Debian packages consists of two steps.
 
