--- a/docs/src/gui/qtvcp.adoc
+++ b/docs/src/gui/qtvcp.adoc
@@ -228,8 +228,8 @@ State_LED #name_of_led{
 ----
 
 ==== Handler Patching - Subclassing Builtin Screens
-We can have QtVCP load a subclassed version of the standard handler file. in that file we can manipulate the original functions or add new ones. +
-Subclassing just means our handler file first loads the original handler file and adds our new code on top of it - so a patch of changes. +
+We can have QtVCP load a subclassed version of the standard handler file. In that file we can manipulate the original functions or add new ones. +
+Subclassing just means our handler file first loads the original handler file and adds our new code on top of it - effectively a patch of changes. +
 This is useful for changing/adding behaviour while still retaining standard handler updates from LinuxCNC repositories.
 
 You may still need to use the handler copy dialog to copy the original handler file to decide how to patch it.
