--- a/docs/src/man/man1/gscreen.1.adoc
+++ b/docs/src/man/man1/gscreen.1.adoc
@@ -6,7 +6,7 @@ gscreen - TOUCHY LinuxCNC Graphical User Interface
 
 == SYNOPSIS
 
-*gscreen* _-ini_ _INIFILE_
+*gscreen* *-ini* _INIFILE_
 
 == DESCRIPTION
 
@@ -15,7 +15,7 @@ It gets run by the runscript usually.
 
 == OPTIONS
 
-*INIFILE*::
+_INIFILE_::
   The ini file is the main piece of an LinuxCNC configuration. It is not
   the entire configuration; there are various other files that go with
   it (NML files, HAL files, TBL files, VAR files). It is, however, the
