--- a/docs/src/man/man1/hal_manualtoolchange.1.adoc
+++ b/docs/src/man/man1/hal_manualtoolchange.1.adoc
@@ -2,8 +2,7 @@
 
 == NAME
 
-hal_manualtoolchange - HAL non-realtime component to enable manual tool
-changes.
+hal_manualtoolchange - HAL non-realtime component to enable manual tool changes.
 
 == SYNOPSIS
 
@@ -35,62 +34,58 @@ the tool table.
 
 == PINS
 
-*hal_manualtoolchange.number s32 in*::
+*hal_manualtoolchange.number* s32 in::
   Receives last programmed T- number.
-*hal_manualtoolchange.change bit in*::
+*hal_manualtoolchange.change* bit in::
   Receives signal to do tool change.
-*hal_manualtoolchange.changed bit out*::
+*hal_manualtoolchange.changed* bit out::
   Signifies that the tool change is complete.
-*hal_manualtoolchange.change_button bit in*::
-  Pin to allow an external switch to signify that the tool change is
-  complete.
+*hal_manualtoolchange.change_button* bit in::
+  Pin to allow an external switch to signify that the tool change is complete.
 
 == USAGE
 
 Normal usage is to load the component in your HAL file and net the
-appropriate pins from the__ motion__ and__ io__ components. The
-following lines are typical in a HAL file when using the
+appropriate pins from the__ motion__ and__ io__ components.
+The following lines are typical in a HAL file when using the
 hal_manualtoolchange non-realtime component.
 
-*loadusr -W hal_manualtoolchange*::
+loadusr -W hal_manualtoolchange::
   This will load the hal_manualtoolchange non-realtime component waiting
   for the component to be ready before continuing.
-*net tool-change iocontrol.0.tool-change =>
-hal_manualtoolchange.change*::
-  When an M6 code is run, motion sets _ iocontrol.0.tool-change _ to
-  high indicating a tool change. This pin should be netted to _
-  hal_manualtoolchange.change_. This causes the Tool change dialog to be
+net tool-change iocontrol.0.tool-change => hal_manualtoolchange.change::
+  When an M6 code is run, motion sets `iocontrol.0.tool-change` to
+  high indicating a tool change. This pin should be netted to
+  `hal_manualtoolchange.change`. This causes the Tool change dialog to be
   displayed on screen and wait for the user to either click the continue
   button on the dialog or press an externally connected button.
-*net tool-changed iocontrol.0.tool-changed <=
-hal_manualtoolchange.changed*::
+net tool-changed iocontrol.0.tool-changed <= hal_manualtoolchange.changed::
   When the Tool change dialog's continue button is pressed, it will set
-  the _hal_manualtoolchange.changed_ pin to high, this should be netted
-  to the _iocontrol.0.tool-changed_ pin, indicating to the motion
+  the `hal_manualtoolchange.changed` pin to high, this should be netted
+  to the `iocontrol.0.tool-changed` pin, indicating to the motion
   controller that the tool change has been completed and can continue
   with the execution of the G-code program.
-*net tool-number iocontrol.0.tool-prep-number =>
-hal_manualtoolchange.number*::
-  When a T- command is executed in a G-code program, the tool number
-  will held in the _iocontrol.0.tool-prep-number. _ This pin should be
-  netted to _hal_manualtoolchange.number. _ The value of this pin, the
+net tool-number iocontrol.0.tool-prep-number => hal_manualtoolchange.number::
+  When a `T-` command is executed in a G-code program, the tool number
+  will held in the `iocontrol.0.tool-prep-number`. This pin should be
+  netted to `hal_manualtoolchange.number`. The value of this pin, the
   tool number is displayed in the tool change dialog to let the user
   know which tool should be loaded.
-*net tool-prepare-loopback iocontrol.0.tool-prepare =>
-iocontrol.0.tool-prepared*::
-  The _ iocontrol.0.tool-prepare _ pin will go true when a T__n__ tool
+net tool-prepare-loopback iocontrol.0.tool-prepare => iocontrol.0.tool-prepared::
+  The `iocontrol.0.tool-prepare` pin will go true when a T__n__ tool
   prepare is requested. Since there is not automated tool changer this
-  pin should be netted to _ iocontrol.0.tool-prepared _ to indocate that
+  pin should be netted to `iocontrol.0.tool-prepared` to indocate that
   the tool has been prepared.
 
 If you wish to use an external button to signal the hal_manualtoolchange
 component that the tool change is complete simply bring the button into
 HAL (via a parport input pin or a hostmot2 gpio input or similar), and
-wire it directly to the _ hal_manualtoolchange.change_button _ pin. For
+wire it directly to the `hal_manualtoolchange.change_button` pin. For
 Example:
 
-*net tool-changed-btn hal_manualtoolchange.change_button <=
-parport.0.pin-15-in*
+----
+net tool-changed-btn hal_manualtoolchange.change_button <= parport.0.pin-15-in
+----
 
 == SEE ALSO
 
