--- a/docs/src/man/man1/halcmd.1.adoc
+++ b/docs/src/man/man1/halcmd.1.adoc
@@ -28,7 +28,7 @@ tab to complete the names of items such as pins and signals.
 *-f* [_<file>_]::
   Ignore commands on command line, take input from _file_ instead. If
   _file_ is not specified, take input from _stdin_.
-*-i *_<INI file>_::
+*-i* _<INI file>_::
   Use variables from the specified _INI file_ for substitutions. See
   *SUBSTITUTION* below.
 *-k*::
@@ -90,7 +90,7 @@ requested component with a call to *dlopen(3)*.
   called _modname_. If _modname_ is "all", it will unload all currently
   loaded realtime HAL modules. *unloadrt* also works by execing
   *linuxcnc_module_helper* or *rtapi_app*, just like *loadrt*.
-*loadusr* _[flags]_ _unix-command_::
+*loadusr* [_flags_] _unix-command_::
   (_load_ __Us__e__r__space component) Executes the given
   _unix-command_, usually to load a non-realtime component. _[flags]_
   may be one or more of:
@@ -233,20 +233,16 @@ followed by *linksp* commands for each pin linked to that signal.
 "*netl*" generates one *net* command for each linked signal, and
 "*netla*" (or "*netal*") generates a similar command using arrows.
 
-"*param*" (or "*parameter*) "generates one *setp* command for each
-parameter.
+"*param*" (or "*parameter*) "generates one *setp* command for each parameter.
 
 "*thread*" generates one *addf* command for each function in each
 realtime thread.
 
-"*unconnectedinpins*" generates a setp command for each unconnected HAL
-input pin.
+"*unconnectedinpins*" generates a setp command for each unconnected HAL input pin.
 
-If _item_ is *allu*), *save* does the equivalent of *comp*, *alias*,
-*sigu*, *netla*, *param*, *thread*, and *unconnectedinpins*.
+If _item_ is *allu*), *save* does the equivalent of *comp*, *alias*, *sigu*, *netla*, *param*, *thread*, and *unconnectedinpins*.
 
-If _item_ is omitted (or *all*), *save* does the equivalent of *comp*,
-*alias*, *sigu*, *netla*, *param*, and *thread*.
+If _item_ is omitted (or *all*), *save* does the equivalent of *comp*, *alias*, *sigu*, *netla*, *param*, and *thread*.
 
 *source* _filename.hal_::
   Execute the commands from _filename.hal_.
@@ -258,8 +254,7 @@ If _item_ is omitted (or *all*), *save* does the equivalent of *comp*,
   name or *alias* of the specified type. Note that the "show" command
   will only show the aliased name, but the original name is still valid
   to use in HAL. The original names can still be seen with "show all" or
-  "show alias" Existing nets will be preserved when a pin name is
-  aliased.
+  "show alias" Existing nets will be preserved when a pin name is aliased.
 *unalias* _type_ _alias_::
   Removes any alias from the pin or parameter alias. "type" must be
   *pin* or *param* "alias" must be an existing name or *alias* of the
