--- a/docs/src/man/man1/halcmd_twopass.1.adoc
+++ b/docs/src/man/man1/halcmd_twopass.1.adoc
@@ -10,9 +10,8 @@ halcmd_twopass - short description
 
 == DESCRIPTION
 
-*halcmd_twopass* is a utility script used when parsing HAL files. It is
-of little relevance to normal users and is used internally by the
-system.
+*halcmd_twopass* is a utility script used when parsing HAL files.
+It is of little relevance to normal users and is used internally by the system.
 
 == SEE ALSO
 
