--- a/docs/src/man/man1/halrmt.1.adoc
+++ b/docs/src/man/man1/halrmt.1.adoc
@@ -6,22 +6,18 @@ halrmt - remote-control interface for LinuxCNC
 
 == SYNOPSIS
 
-*halrmt* [--port <port number>] [--name <server name>] [--connectpw
-<password>] [--enablepw <password>] [--sessions <max sessions>] [-ini
-<INI file>]
+*halrmt* [*--port* _<port number>_] [*--name* _<server name>_] [*--connectpw* _<password>_] [*--enablepw* _<password>_] [*--sessions* _<max sessions>_] [*-ini* _<INI file>_]
 
 == OPTIONS
 
-With -- --port Waits for socket connections (telnet) on specified
-socket, without port specification it uses default port 5006. (note:
-linuxcncrsh uses 5007 as default) With -- --name <server name> Sets the
-server name to specified name for Hello. With -- --connectpw <password>
-Sets the connection password to 'password'. Default EMC With --
---enablepw <password> Sets the enable password to 'password'. Default
-EMCTOO With -- --sessions <max sessions> Sets the maximum number of
-simultaneous connextions to max sessions. Default is no limit (-1). With
--- -ini _<INI file>_, uses the specified _INI file_ instead of the
-default emc.ini.
+--port _port_:: Waits for socket connections (telnet) on specified
+socket, without port specification it uses default port 5006.
+(note: linuxcncrsh uses 5007 as default)
+--name _server_name_:: Sets the server name to specified name for Hello.
+--connectpw _password_:: Sets the connection password to 'password'. Default: EMC.
+--enablepw _password_:: Sets the enable password to _password_. Default EMCTOO.
+--sessions <max sessions>:: Sets the maximum number of simultaneous connextions to max sessions. Default is no limit (-1).
+-ini _<INI file>_:: Uses the specified _INI file_ instead of the default emc.ini.
 
 == DESCRIPTION
 
@@ -32,205 +28,178 @@ exceptions are passwords, file paths and text strings. The supported
 commands are as follows: *HELLO* Hello <password> <client> <version>
 
 If a valid password was entered the server will respond with HELLO ACK
-<Server Name> <Server Version> Where server name and server version are
-looked up from the implementation. if an invalid password or any other
-syntax error occurs then the server responds with: HELLO NAK *Get* The
-get command includes one of the HAL sub-commands, described below and
-zero or more additional parameters. *Set* The set command inclides one
-of the HAL sub-commands, described below and one or more additional
-parameters. *Quit* The quit command disconnects the associated socket
-connection. *Shutdown* The shutdown command tells LinuxCNC to shut down
+_Server Name>_ _<Server Version>_ where server name and server version are
+looked up from the implementation. If an invalid password or any other
+syntax error occurs then the server responds with: HELLO NAK
+
+Get:: The get command includes one of the HAL sub-commands,
+described below and zero or more additional parameters.
+Set:: The set command inclides one of the HAL sub-commands,
+described below and one or more additional parameters.
+Quit:: The quit command disconnects the associated socket connection.
+Shutdown:: The shutdown command tells LinuxCNC to shut down
 before quitting the connection. This command may only be issued if the
 Hello has been successfully negotiated and the connection has control of
 the CNC (see enable sub-command below). This command has no parameters.
-
-*Help*
-
-The help command will return help information in text format over the
+Help:: The help command will return help information in text format over the
 telnet connection. If no parameters are specified, it will itemize the
 available commands. If a command is specified, it will provide usage
 information for the specified command. Help will respond regardless of
 whether a "Hello" has been successfully negotiated.
 
-*HAL sub-commands:* echo on | off With get will return the current echo
+*HAL sub-commands:*
+
+echo on | off:: With get will return the current echo
 state, with set, sets the echo state. When echo is on, all commands will
-be echoed upon receipt. This state is local to each connection. verbose
-on | off With get will return the current verbose state, with set, sets
+be echoed upon receipt. This state is local to each connection.
+
+verbose on | off:: With get will return the current verbose state, with set, sets
 the verbose state. When in verbose mode is on, all set commands return
 positive acknowledgement in the form SET <COMMAND> ACK. In addition,
 text error messages will be issued when in verbose mode. This state is
-local to each connection. enable <pwd> | off With get will return On or
+local to each connection.
+
+enable <pwd> | off:: With get will return On or
 Off to indicate whether the current connection is enabled to perform
 control functions. With set and a valid password, the current connection
 is enabled for control functions. "OFF" may not be used as a password
 and disables control functions for this connection.
 
-config [TBD] comm_mode ascii | binary With get, will return the current
+config [TBD] comm_mode ascii | binary:: With get, will return the current
 communications mode. With set, will set the communications mode to the
-specified mode. The binary protocol is TBD. comm_prot <version no> With
-get, returns the current protocol version used by the server, with set,
-sets the server to use the specified protocol version, provided it is
-lower than or equal to the highest version number supported by the
-server implementation.
+specified mode. The binary protocol is TBD.
 
-Comps [<substring>]
+comm_prot <version no>:: With get, returns the current protocol version used by the server,
+with set, sets the server to use the specified protocol version, provided it is
+lower than or equal to the highest version number supported by the server implementation.
 
+Comps [<substring>]::
 Get only, returns all components beginning with the specified substring.
 If no substring is specified then it returns all components.
 
-Pins [<substring>]
-
+Pins [<substring>]::
 Get only, returns all information about all pins beginning with the
 specified substring. If no substring is specified then it returns all
 pins.
 
-PinVals [<substring>]
-
+PinVals [<substring>]::
 Get only, returns only value information about all pins beginning with
 the specified substring. If no substring is specified then it returns
 all pins.
 
-Signals [<substring>]
-
+Signals [<substring>]::
 Get only, returns all information about all signals beginning with the
 specified substring. If no substring is specified then it returns all
 signals.
 
-SigVals [<substring>]
-
+SigVals [<substring>]::
 Get only, returns only value information about all signals beginning
 with the specified substring. If no substring is specified then it
 returns all pins.
 
-Params [<substring>]
-
+Params [<substring>]::
 Get only, returns all information about all parameters beginning with
 the specified substring. If no substring is specified then it returns
 all parameters.
 
-ParamVals [<substring>]
-
+ParamVals [<substring>]::
 Get only, returns only value information about all parameters beginning
 with the specified substring. If no substring is specified then it
 returns all pins parameters.
 
-Functs [<substring>]
-
+Functs [<substring>]::
 Get only, returns all information about all functions beginning with the
 specified substring. If no substring is specified then it returns all
-functions. Threads
+functions.
 
-Get only, returns all information about all functions. Comp <name>
+Threads::
+Get only, returns all information about all functions.
 
+Comp <name>::
 Get only, returns the component matching the specified name.
 
-Pin <name>
+Pin <name>::
+Get only, returns all information about the pin matching the specified name.
 
-Get only, returns all information about the pin matching the specified
-name.
-
-PinVal <name>
-
+PinVal <name>::
 Get only, returns the value of the pin matching the specified name.
 
-Sig <name>
+Sig <name>::
+Get only, returns all information about the pin matching the specified name.
 
-Get only, returns all information about the pin matching the specified
-name.
+SigVal <name>::
+Get only, returns just the value of the signal matching the specified name.
 
-SigVal <name>
+Param <name>::
+Get only, returns all information about the parameter matching the specified name.
 
-Get only, returns just the value of the signal matching the specified
-name. Param <name>
+ParamVal <name>::
+Get only, returns just the value of the parameter matching the specified name.
 
+Funct <name>::
 Get only, returns all information about the parameter matching the
 specified name.
 
-ParamVal <name>
-
-Get only, returns just the value of the parameter matching the specified
-name.
-
-Funct <name>
-
-Get only, returns all information about the parameter matching the
-specified name.
-
-Thread <name>
-
+Thread <name>::
 Get only, returns all information about the thread matching the
 specified name.
 
-LoadRt <name>
-
+LoadRt <name>::
 Set only, loads the real time executable specified by name.
 
-Unload <name>
-
+Unload <name>::
 Set only, unloads the executable specified by name.
 
-LoadUsr <name>
-
+LoadUsr <name>::
 Set only, loads the user executable specified by name.
 
-Linkps <pin name> <signal name>
-
+Linkps <pin name> <signal name>::
 Set only, links the specified pin to the specified signal.
 
-Linksp <signal name> <pin name>
-
+Linksp <signal name> <pin name>::
 Set only, links the specified signal to the specified pin.
 
-Linkpp <pin name 1> <pin name 2>
+Linkpp <pin name 1> <pin name 2>::
+Set only, links the pin specified by pin 1 with the pin specified by pin 2.
 
-Set only, links the pin specified by pin 1 with the pin specified by pin
-2.
-
-Net <net list>
-
+Net <net list>::
 Set only, nets the specified net list.
 
-Unlinkp <pin name 1> <pin name 2>
-
+Unlinkp <pin name 1> <pin name 2>::
 Set only, unlinks the specified pins.
 
-Lock
+Lock::
 
-Unlock
+Unlock::
 
-NewSig <name> <type>
+NewSig <name> <type>::
 
 Set only, creates the signal specified by name and of type specified by
 type.
 
-DelSig <name>
-
+DelSig <name>::
 Set only, deletes the signal specified by name.
 
-SetP <name> <value>
-
+SetP <name> <value>::
 Set only, sets the parameter specified by name to the value specified by
 value.
 
-SetS <name> <value>
-
+SetS <name> <value>::
 Set only, sets the signal specified by name to the value specified by
 value.
 
-AddF <name> <thread> [<parameters>]
-
+AddF <name> <thread> [<parameters>]::
 Set only, adds the function specified by name, to the thread specified
 by thread, with the optional parameters specified by parameters.
 
-DelF <name>
-
+DelF <name>::
 Set only, deletes the function specified by name.
 
-Save
+Save::
 
-Start
+Start::
 
-Stop
+Stop::
 
 == SEE ALSO
 
