--- a/docs/src/man/man1/halshow.1.adoc
+++ b/docs/src/man/man1/halshow.1.adoc
@@ -6,24 +6,23 @@ halshow - Show HAL parameters, pins and signals
 
 == SYNOPSIS
 
-*halshow [Options] [watchfile]*
+*halshow* [_options_] [_watchfile_]
 
 == OPTIONS
 
---help (help) --fformat format_string_for_float --iformat
-format_string_for_int --noprefs don't use preference file to save
-settings
+--help:: (help)
+--fformat _format_string_for_float_::
+--iformat _format_string_for_int_::
+--noprefs:: don't use preference file to save settings
 
 For format see https://www.tcl.tk/man/tcl8.6.11/TclCmd/format.html[]
 
-Example: "%.5f" displays a float with 5 digits right of the decimal
-point
+Example: "%.5f" displays a float with 5 digits right of the decimal point
 
 == DESCRIPTION
 
-*halshow* creates a GUI interface to view and interact with a running
-HAL session. It is documented in the PDF and HTML docs much more
-completely than is possible in a manpage:
+*halshow* creates a GUI interface to view and interact with a running HAL session.
+It is documented in the PDF and HTML docs much more completely than is possible in a manpage:
 http://linuxcnc.org/docs/html/hal/halshow.html[]
 
 == SEE ALSO
@@ -36,10 +35,9 @@ LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
 == HISTORY
 
 LinuxCNC 2.9::
- - Added buttons for pin/parameter/signal manipulation
- - Added menu entries for setting update interval, adding manually
- - Added right-click menu for copy, set, unlink pin and remove from
-   view
+ - Added buttons for pin/parameter/signal manipulation.
+ - Added menu entries for setting update interval, adding manually.
+ - Added right-click menu for copy, set, unlink pin and remove from view.
 
 == BUGS
 
