--- a/docs/src/man/man1/haltcl.1.adoc
+++ b/docs/src/man/man1/haltcl.1.adoc
@@ -2,12 +2,11 @@
 
 == NAME
 
-haltcl - manipulate the LinuxCNC HAL from the command line using a Tcl
-interpreter.
+haltcl - manipulate the LinuxCNC HAL from the command line using a Tcl interpreter.
 
 == SYNOPSIS
 
-*haltcl [_-i_ <INI file>] [_filename_]*
+*haltcl* [*-i* _<INI file>_] [_filename_]
 
 == DESCRIPTION
 
@@ -19,15 +18,27 @@ be set up with a single command.
 == OPTIONS
 
 *-i* _<INI file>_::
-  If specified, the INI file is read and used to create Tcl global
-  variable arrays. An array is created for each SECTION of the INI file
-  with elements for each ITEM in the section.
+  If specified, the INI file is read and used to create Tcl global variable arrays.
+  An array is created for each SECTION of the INI file with elements for each ITEM in the section.
 
-For example, if the INI file contains: [SECTION_A]ITEM_1 = 1
-[SECTION_A]ITEM_2 = 2 [SECTION_B]ITEM_1 = 10
+For example, if the INI file contains:
 
-The corresponding Tcl variables are: SECTION_A(ITEM_1) = 1
-SECTION_A(ITEM_2) = 2 SECTION_B(ITEM_1) = 10
+----
+[SECTION_A]
+ITEM_1 = 1
+[SECTION_A]
+ITEM_2 = 2
+[SECTION_B]
+ITEM_1 = 10
+----
+
+The corresponding Tcl variables are:
+
+----
+SECTION_A(ITEM_1) = 1
+SECTION_A(ITEM_2) = 2
+SECTION_B(ITEM_1) = 10
+----
 
 *-ini* _<INI file>_ -- declining usage, use *-i* _<INI file>_::
 *filename*::
@@ -40,18 +51,22 @@ SECTION_A(ITEM_2) = 2 SECTION_B(ITEM_1) = 10
 commands for the hal language as described for *halcmd*(1). The
 augmented commands can be listed with the command:
 
+----
 haltcl: hal --commands
 
 addf alias delf delsig getp gets ptype stype help linkpp linkps linksp
 list loadrt loadusr lock net newsig save setexact_for_test_suite_only
 setp sets show source start status stop unalias unlinkp unload unloadrt
 unloadusr unlock waitusr
+----
 
 Two of the augmented commands, 'list' and 'gets', require special
 treatment to avoid conflict with Tcl built-in commands having the same
 names. To use these commands, precede them with the keyword 'hal':
 
+----
 hal list hal gets
+----
 
 == REPORTING BUGS
 
