docs: man/man1/[h-l]* formatting asciidoc

--- a/docs/src/man/man1/hy_vfd.1.adoc
+++ b/docs/src/man/man1/hy_vfd.1.adoc
@@ -20,8 +20,7 @@ PD001 = 2::
   Set register PD001 (source of run commands) to 2 (communication port).
 
 PD002 = 2::
-  Set register PD002 (source of operating frequency) to 2 (communication
-  port).
+  Set register PD002 (source of operating frequency) to 2 (communication port).
 
 PD004::
   Set register PD004 (Base Frequency) according to motor specs. This is
@@ -44,24 +43,20 @@ PD142::
   plate. This is the motor's maximum current, in Ampere.
 
 PD143::
-  Set register PD143 (Number of Motor Poles) according to motor name
-  plate.
+  Set register PD143 (Number of Motor Poles) according to motor name plate.
 
 PD144::
   Set register PD144 (rated motor revolutions) according to motor name
   plate. This is the motor's speed in RPM at 50 Hz. Note: This is not
-  the motor's max speed (unless the max motor frequency happens to be 50
-  Hz)!
+  the motor's max speed (unless the max motor frequency happens to be 50 Hz)!
 
 PD163 = 1::
   Set register PD163 (communication address) to 1. This matches the
-  default in the hy_vfd driver, change this if your setup has special
-  needs.
+  default in the hy_vfd driver, change this if your setup has special needs.
 
 PD164 = 2::
   Set register PD164 (baud rate) to 2 (19200 bps). This matches the
-  default in the hy_vfd driver, change this if your setup has special
-  needs.
+  default in the hy_vfd driver, change this if your setup has special needs.
 
 PD165 = 3::
   Set register PD165 (communication data method) to 3 (8n1 RTU). This
@@ -85,7 +80,7 @@ You will need to log out and back in again for this to take effect.
 
 == OPTIONS
 
--d, --device <path>::
+-d, --device _<path>_::
   (default /dev/ttyS0) Set the name of the serial device node to use.
 
 -g, --debug::
@@ -94,15 +89,14 @@ You will need to log out and back in again for this to take effect.
   messages to be printed in hex on the terminal.
 
 -y, --regdump::
-  Print the current value of all registers as soon as the VFD is
-  enabled.
+  Print the current value of all registers as soon as the VFD is enabled.
 
--n, --name <string>::
+-n, --name _<string>_::
   (default hy_vfd) Set the name of the HAL module. The HAL comp name
   will be set to <string>, and all pin and parameter names will begin
   with <string>.
 
--b, --bits <n>::
+-b, --bits _<n>_::
   (default 8) Set number of data bits to <n>, where n must be from 5 to
   8 inclusive. This must match the setting in register PD165 of the
   Huanyang VFD.
@@ -111,7 +105,7 @@ You will need to log out and back in again for this to take effect.
   (default odd) Set serial parity to even, odd, or none. This must match
   the setting in register PD165 of the Huanyang VFD.
 
--r, --rate <n>::
+-r, --rate _<n>_::
   (default 38400) Set baud rate to <n>. It is an error if the rate is
   not one of the following: 110, 300, 600, 1200, 2400, 4800, 9600,
   19200, 38400, 57600, 115200. This must match the setting in register
@@ -121,33 +115,33 @@ You will need to log out and back in again for this to take effect.
   (default 1) Set serial stop bits to 1 or 2. This must match the
   setting in register PD165 of the HuanyangVFD.
 
--t, --target <n>::
+-t, --target _<n>_::
   (default 1) Set HYCOMM target (slave) number. This must match the
   device number you set on the Hyanyang VFD in register PD163.
 
--F, --max-frequency <n>::
+-F, --max-frequency _<n>_::
   (default: read from VFD) If specified, program register PD005 of the
   VFD with the specified max frequency of <n> Hz (and use the same max
   frequency in the hy_vfd driver). If not specified, read the max
   frequency to use from register PD005 of the VFD.
 
--f, --min-frequency <n>::
+-f, --min-frequency _<n>_::
   (default: read from VFD) If specified, program register PD011 of the
   VFD with the specified minimum frequency of <n> Hz (and use the same
   minimum frequency in the hy_vfd driver). If not specified, read the
   minimum frequency to use from register PD011 of the VFD.
 
--V, --motor-voltage <n>::
+-V, --motor-voltage _<n>_::
   (default: read from VFD) If specified, program register PD141 of the
   VFD with the specified max motor voltage of <n> Volts. If not
   specified, read the max motor voltage from register PD141 of the VFD.
 
--I, --motor-current <n>::
+-I, --motor-current _<n>_::
   (default: read from VFD) If specified, program register PD142 of the
   VFD with the specified max motor current of <n> Amps. If not
   specified, read the max motor current from register PD142 of the VFD.
 
--S, --motor-speed <n>::
+-S, --motor-speed _<n>_::
   (default: compute from value read from VFD P144) This command-line
   argument is the motor's max speed. If specified, compute the motor's
   speed at 50 Hz from this argument and from the motor's max frequency
@@ -157,21 +151,21 @@ You will need to log out and back in again for this to take effect.
   VFD, and use that and the max frequency to compute the motor's max
   speed.
 
--P, --motor-poles <n>::
+-P, --motor-poles _<n>_::
   (default: read value from VFD P143) This command-line argument is the
   number of poles in the motor. If specified, this value is sent to the
   VFD's register PD143. If not specified, the value is read from PD143
   and reported on the corresponding HAL pin.
 
--x, --register PDnnn=mmm <n>::
+-x, --register PD__nnn__=__mmm__ _<n>_::
   Set a specific register to a new value. Can be used to set up to 10
   registers. Parameters will "stick" (but only after hy_vfd.enable has
   been set true) so to set more than ten parameters it is possible to
   repeatedly load the driver with a set of registers to set then enable
   (setp hy_vfd.enable 1) and unload (unload hy_vfd) the driver at a
   halrun(1) prompt. For example: +
-  *loadusr -W hy_vfd -d /ttyUSB0 --register PD014=30 --register PD015=30
-  * +
+  loadusr -W hy_vfd -d /ttyUSB0 --register PD014=30 --register PD015=30
+  +
   Will set both ramp1 times to 3 seconds. The values should be scaled
   according to the manual data. The example above uses values with a
   resolution of 0.1 seconds, so the numbers are 10x larger than the
