--- a/docs/src/man/man1/linuxcncmkdesktop.1.adoc
+++ b/docs/src/man/man1/linuxcncmkdesktop.1.adoc
@@ -10,8 +10,7 @@ linuxcncmkdesktop - create a desktop icon for LinuxCNC
 
 == DESCRIPTION
 
-*linuxcncmkdesktop* Script used by pickconfig to create a desktop icon
-for LinuxCNC.
+*linuxcncmkdesktop* Script used by pickconfig to create a desktop icon for LinuxCNC.
 
 == SEE ALSO
 
