--- a/docs/src/man/man1/image-to-gcode.1.adoc
+++ b/docs/src/man/man1/image-to-gcode.1.adoc
@@ -18,7 +18,7 @@ http://linuxcnc.org/docs/devel/html/gui/image-to-gcode.html
 
 == SEE ALSO
 
-linuxcnc(1)*
+linuxcnc(1)
 
 Much more information about LinuxCNC and HAL is available in the
 LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
