--- a/docs/src/man/man1/latency-histogram.1.adoc
+++ b/docs/src/man/man1/latency-histogram.1.adoc
@@ -6,20 +6,20 @@ latency-histogram - plot a histogram of machine latency
 
 == SYNOPSIS
 
-*latency-histogram* [*-?|--help*] [*--base* *_ns_*] [*--servo* *_ns_*] [*--bbinsize* *_ns_*] [*--sbinsize* *_ns_*] [*--bbins* *_ns_*] [*--sbins* *_ns_*] [*--logscale* *_0|1_*] [*--text* *_note_*] [*--show*] [*--nobase*] [*--verbose*] [*--nox*]
+*latency-histogram* [*-?*|*--help*] [*--base* _ns_] [*--servo* _ns_] [*--bbinsize* _ns_] [*--sbinsize* _ns_] [*--bbins* _ns_] [*--sbins* _ns_] [*--logscale* 0|1] [*--text* _note_] [*--show*] [*--nobase*] [*--verbose*] [*--nox*]
 
 == DESCRIPTION
 
-The latency test is important when configuring a LinuxCNC system. An
-adjunct to the standard latency-test latency-histogram plots the
+The latency test is important when configuring a LinuxCNC system.
+An adjunct to the standard latency-test latency-histogram plots the
 distribution of latency. This can be useful to get a feel for how
 frequent the high latency excursions are.
 
-LinuxCNC and HAL should not be running, stop with _halrun -U_. Large
-number of bins and/or small binsizes will slow updates. For single
-thread, specify *--nobase* (and options for servo thread). Measured
-latencies outside of the +/- bin range are reported with special end
-bars. Use *--show* to show count for the off-chart [pos|neg] pin.
+LinuxCNC and HAL should not be running, stop with `halrun -U`.
+Large number of bins and/or small binsizes will slow updates.
+For single thread, specify *--nobase* (and options for servo thread).
+Measured latencies outside of the +/- bin range are reported with special end bars.
+Use *--show* to show count for the off-chart [pos|neg] pin.
 
 More details: https://linuxcnc.org/docs/html/install/latency-test.html
 
